# parcopy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  release.toml
.github/workflows/: ci.yml  pre-commit.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/common/: mod.rs
cli/tests/integration/: basic.rs  edge_cases.rs  error_handling.rs  no_space.rs  plan_output.rs  resume.rs
cli/tests/integration/edge_cases/: boundary_cases.rs  file_type_conflict.rs  symlink_handling.rs  timestamp_preservation.rs
docs/migrations/: 2026-02-rfc-0001-cli.md
docs/reference/: cli-behavior.md  error-codes.md
docs/rfc/: RFC-0001.md
gov/: config.toml  releases.toml
gov/adr/: ADR-0001-symlink-loop-detection-strategy-for-directory-traversal.toml
gov/rfc/RFC-0001/: rfc.json
gov/rfc/RFC-0001/clauses/: C-COMPATIBILITY.json  C-ERROR-MODEL.json  C-LIBRARY-API.json  C-NON-GOALS.json  C-PLAN-OUTPUT.json  C-PROFILES.json  C-SUMMARY.json
gov/work/: 2026-02-24-address-external-review-findings-for-rfc-0001.toml  2026-02-24-amend-rfc-0001-for-no-compat-layer-and-execution-json-output.toml  2026-02-24-amend-rfc-0001-with-stable-error-codes-and-typed-error-enums.toml  2026-02-24-define-modern-pcp-api-and-cli-architecture.toml  2026-02-24-fix-ci-test-failures-in-no-space-and-error-handling-tests.toml  2026-02-24-fix-symlink-loop-false-positives-under-l-mode.toml  2026-02-24-implement-rfc-0001-end-to-end.toml  2026-02-24-increase-test-coverage-for-plan-execute-error-and-copy-dir-modules.toml  2026-02-24-resolve-rfc-0001-output-mode-and-explain-strength-inconsistencies.toml  2026-02-24-simplify-error-code-ssot-to-code-only.toml  2026-03-01-fix-0-3-2-release-with-updated-dependencies.toml  2026-03-01-mid-file-cancellation-support-for-large-files.toml
src/: builder.rs  copy.rs  error.rs  lib.rs  options.rs  plan_execute.rs  progress.rs  win_attrs.rs
src/copy/: dir.rs  file.rs  mod.rs  reflink.rs  utils.rs
src/utils/: mod.rs  path.rs
