[package]
name = "parcopy-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast parallel file copy command (pcp)"
keywords = ["copy", "parallel", "cli", "cp"]
categories = ["command-line-utilities", "filesystem"]
include = ["src/**"]

[[bin]]
name = "pcp"
path = "src/main.rs"

[dependencies]
parcopy = { workspace = true, features = ["progress", "reflink"] }
clap.workspace = true
indicatif.workspace = true
ctrlc = "3"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
libc = "0.2"
predicates = "3"
rstest = "0.26"
tempfile = "3"
serial_test = "3"
scopeguard = "1"

[[test]]
name = "basic"
path = "tests/integration/basic.rs"

[[test]]
name = "resume"
path = "tests/integration/resume.rs"

[[test]]
name = "error_handling"
path = "tests/integration/error_handling.rs"

[[test]]
name = "no_space"
path = "tests/integration/no_space.rs"

[[test]]
name = "edge_cases"
path = "tests/integration/edge_cases.rs"

[[test]]
name = "plan_output"
path = "tests/integration/plan_output.rs"

[lints]
workspace = true
